--- a/ProjectUmico.Web/ProjectUmico.Web.csproj
+++ b/ProjectUmico.Web/ProjectUmico.Web.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectUmico.Application\ProjectUmico.Application.csproj" />
+    <ProjectReference Include="..\ProjectUmico.Infrastructure\ProjectUmico.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
