--- a/ProjectUmico.Application/ProjectUmico.Application.csproj
+++ b/ProjectUmico.Application/ProjectUmico.Application.csproj
@@ -10,7 +10,10 @@
     <Folder Include="Categories" />
     <Folder Include="Common\Behaviours" />
     <Folder Include="Common\Exceptions" />
-    <Folder Include="Common\Interfaces" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
