--- a/ProjectUmico.Domain/ProjectUmico.Domain.csproj
+++ b/ProjectUmico.Domain/ProjectUmico.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
   </ItemGroup>
 
 </Project>
