--- a/ProjectUmico.Infrastructure/ProjectUmico.Infrastructure.csproj
+++ b/ProjectUmico.Infrastructure/ProjectUmico.Infrastructure.csproj
@@ -6,4 +6,24 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistance\Configurations" />
+    <Folder Include="Persistance\Interceptors" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectUmico.Application\ProjectUmico.Application.csproj" />
+    <ProjectReference Include="..\ProjectUmico.Domain\ProjectUmico.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
