--- a/ProjectUmico.Web/appsettings.json
+++ b/ProjectUmico.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbConnect": "Server=localhost;Database=TestUm;User Id=sa;Password=passwordV$03;"
 }
