--- a/ProjectUmico.Application/ProjectUmico.Application.csproj
+++ b/ProjectUmico.Application/ProjectUmico.Application.csproj
@@ -7,13 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Categories" />
     <Folder Include="Common\Behaviours" />
-    <Folder Include="Common\Exceptions" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectUmico.Domain\ProjectUmico.Domain.csproj" />
   </ItemGroup>
 
 </Project>
