Added automation script

--- a/ProjectUmico.Api/appsettings.json
+++ b/ProjectUmico.Api/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnect": "Server=localhost;Database=TestUm;User Id=sa;Password=passwordV$03;"
+  "DbConnect": "Server=localhost;Database=TestUm;User Id=sa;Password=passwordV$03;",
+  "SqlLiteConnection": "Data source=TEST_DB"
 }
