Added simple authentication.

--- a/ProjectUmico.Api/appsettings.json
+++ b/ProjectUmico.Api/appsettings.json
@@ -7,5 +7,10 @@
   },
   "AllowedHosts": "*",
   "DbConnect": "Server=localhost;Database=TestUm;User Id=sa;Password=passwordV$03;",
+  "JwtSettings":
+  {
+    "Secret": "XvO79BZToasTvtFusm0yRwnYVF6Tbf7E",
+    "Expire": ""
+  },
   "SqlLiteConnection": "Data source=TEST_DB"
 }
