--- a/ProjectUmico.Api/ProjectUmico.Api.csproj
+++ b/ProjectUmico.Api/ProjectUmico.Api.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
           <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,10 @@
     <ItemGroup>
       <ProjectReference Include="..\ProjectUmico.Application\ProjectUmico.Application.csproj" />
       <ProjectReference Include="..\ProjectUmico.Infrastructure\ProjectUmico.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Common" />
     </ItemGroup>
 
 </Project>
