--- a/ProjectUmico.Api/appsettings.json
+++ b/ProjectUmico.Api/appsettings.json
@@ -10,7 +10,7 @@
   "JwtSettings":
   {
     "Secret": "XvO79BZToasTvtFusm0yRwnYVF6Tbf7E",
-    "Expire": ""
+    "TokenLifeTime": "00:00:51"
   },
   "SqlLiteConnection": "Data source=TEST_DB"
 }
